# MidMan

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI.md  PLAYBOOKS.md  ROADMAP.md  SECURITY.md
examples/playbooks/: daily_checks.yaml
examples/profiles/: sample-idrac.yaml  sample-linux.yaml  sample-switch.yaml
midman.egg-info/: PKG-INFO  SOURCES.txt
mypc/: README.md  find_large_files.py
src/midman/: __init__.py  __main__.py  ai_backends.py  ai_parser.py  cli.py  command_catalog.py  connectors.py  executor.py  formatter.py  playbook_schema.py  profiles.py  safety.py  ssh_client.py  storage.py  tui.py
src/midman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_ai_parser.py  test_cli.py  test_executor.py  test_playbook_schema.py  test_profiles.py  test_safety.py  test_tui.py
